; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_vma_manager.c_drm_vma_offset_add.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_vma_manager.c_drm_vma_offset_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_vma_offset_manager = type { i32, i32 }
%struct.drm_vma_offset_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_vma_offset_add(%struct.drm_vma_offset_manager* %0, %struct.drm_vma_offset_node* %1, i64 %2) #0 {
  %4 = alloca %struct.drm_vma_offset_manager*, align 8
  %5 = alloca %struct.drm_vma_offset_node*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.drm_vma_offset_manager* %0, %struct.drm_vma_offset_manager** %4, align 8
  store %struct.drm_vma_offset_node* %1, %struct.drm_vma_offset_node** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.drm_vma_offset_manager*, %struct.drm_vma_offset_manager** %4, align 8
  %9 = getelementptr inbounds %struct.drm_vma_offset_manager, %struct.drm_vma_offset_manager* %8, i32 0, i32 0
  %10 = call i32 @write_lock(i32* %9)
  %11 = load %struct.drm_vma_offset_node*, %struct.drm_vma_offset_node** %5, align 8
  %12 = getelementptr inbounds %struct.drm_vma_offset_node, %struct.drm_vma_offset_node* %11, i32 0, i32 0
  %13 = call i32 @drm_mm_node_allocated(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %3
  %16 = load %struct.drm_vma_offset_manager*, %struct.drm_vma_offset_manager** %4, align 8
  %17 = getelementptr inbounds %struct.drm_vma_offset_manager, %struct.drm_vma_offset_manager* %16, i32 0, i32 1
  %18 = load %struct.drm_vma_offset_node*, %struct.drm_vma_offset_node** %5, align 8
  %19 = getelementptr inbounds %struct.drm_vma_offset_node, %struct.drm_vma_offset_node* %18, i32 0, i32 0
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @drm_mm_insert_node(i32* %17, i32* %19, i64 %20)
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %15, %3
  %23 = load %struct.drm_vma_offset_manager*, %struct.drm_vma_offset_manager** %4, align 8
  %24 = getelementptr inbounds %struct.drm_vma_offset_manager, %struct.drm_vma_offset_manager* %23, i32 0, i32 0
  %25 = call i32 @write_unlock(i32* %24)
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @drm_mm_node_allocated(i32*) #1

declare dso_local i32 @drm_mm_insert_node(i32*, i32*, i64) #1

declare dso_local i32 @write_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
